# Stranger-Amps-2

./: .gitignore  CMakeLists.txt  JUCE_PORTING_GUIDE.md  README.md  WEBAPP_INTEGRATION.md  build-webui.sh  design_guidelines.md  package-lock.json  package.json  replit.md  tailwind.config.ts  vercel.json  vite.config.ts
JUCE/examples/Assets/: webapp_url.txt
JUCE/examples/CMake/AudioPlugin/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
JUCE/examples/DemoRunner/: CMakeLists.txt
JUCE/examples/DemoRunner/Source/Demos/: DemoPIPs2.cpp
JUCE/examples/GUI/: WebAppDemo.h
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/WebView/: WebViewBridge.cpp  WebViewBridge.h
client/: index.html
client/public/audio/: amp-processor.js
client/src/: App.tsx  index.css  juce-bridge.ts  juce-webview-fix.css  main.tsx
client/src/components/: ErrorBoundary.tsx
client/src/components/amp/: AIEnhanceDialog.tsx  AmpHead.tsx  AmpHeadDisplay.tsx  AudioDeviceSelector.tsx  Cabinet.tsx  DelayPedalDialog.tsx  GainMeter.tsx  IRSelector.tsx  LEDIndicator.tsx  LeftControlPanel.tsx  ParametricEQDialog.tsx  PitchDialog.tsx  PresetSelector.tsx  ReverbDialog.tsx  RightControlPanel.tsx  RotaryKnob.tsx  RoutingSelector.tsx  ThallFeaturesDialog.tsx  ToggleSwitch.tsx  TunerDialog.tsx
client/src/lib/: audioEngine.ts  queryClient.ts
client/src/pages/: amp-simulator.tsx
server/: routes.ts  storage.ts
shared/: schema.ts
